<resources>
    <string name="app_name">Registration page</string>
    <string name="registration_button">Continue ></string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="hint_name">Enter your name</string>
    <string name="surname">Surname</string>
    <string name="hint_surname">Enter your surname</string>
    <string name="password">Password</string>
    <string name="hint_password">Enter your password</string>
    <string name="error_message">All fields must be completed</string>
    <string name="switch_text">Are you over 18 years old?</string>
    <string name="welcome">Welcome</string>
    <string name="pers_info">Personal Information</string>
    <string name="name_surname">Name Surname</string>


</resources>